syntax = "proto3";

package venice;

import "google/protobuf/descriptor.proto";

message ObjectRln {
  // Type of reference one of [ NamedRef, SelectorRef, BackRef ]
  string Type = 1;
  // Object being referred to.
  string To = 2;
}

// RestEndpoint is used by the venice.apiRestservice option to specify REST resources to be exposed.
message RestEndpoint {
  // Object for which the endpoint is being defined
  string Object = 1;
  // Methods allowed on the resource
  repeated string Method = 2;
  // Pattern for the URI
  string Pattern = 3;
  // Prefix for the URL
  string Prefix = 4;
}

// ObjectPrefix defines the way the object is identified in the kvstore and REST api.
message ObjectPrefix {
  // Path is the path component of the prefix - like tenant etc.
  string Path  = 1;
  // Target is the prefix for the object. Which is usually the containers name or singleton name
  oneof Target {
    // this object is part of a collection. Collection is the collections name
    string Collection = 2;
    // Singleton objects name
    string Singleton = 3;
  }
}

// ActionEndpoint defines a action endpoint definition
message ActionEndpoint {
  // Target specifies whether the action is on a collection or an instance
  oneof Target {
    string Collection = 1;
    string Object = 2;
  }
  // Action is the name of the Action
  string Action = 3;
  // Request is the request parameter message type. Should be defined in the same file
  string Request = 4;
  // Response is the response parameter message type. Should be defined in the same file
  string Response = 5;
}

// Venice Option extensions applicable at the file level.
extend google.protobuf.FileOptions {
  // GRPC destination. This is typically a service discovery key.
  string fileGrpcDest = 51235;
  // fileApiServerBacked indicates if this is backed by the API server.
  //   default is true.
  bool fileApiServerBacked = 51236;
  // fileCategory specifies the API category this file belongs to.
  //   the category shows up as /<category>/<api-group/<version>/...
  string fileCategory = 51237;
};

// Venice Option extensions applicable at the Service level.
extend google.protobuf.ServiceOptions {
  // API version.
  string apiVersion = 51250;
  // Prefix is used in how the URI is constructed. For example if the prefix option
  // is specified as storage then the URI would be "/<version>/venice/storage/<URI path specified for endpoint>
  string apiPrefix= 51251;
  // crudService is used to specify the messages for which this service provides gRPC CRUD Apis.
  repeated string apiGrpcCrudService = 51252;
  // apiRestService is used to specify the REST services offered by the service.
  repeated RestEndpoint apiRestService = 51253;
  // naplesRestService is used to specify the REST services for auto-generating rest endpoints and their corresponding tests in naples
  repeated RestEndpoint naplesRestService = 51254;
  // apiAction specifies parameters for an action endpoints
  repeated ActionEndpoint apiAction = 51255;
  // list of enum names containing the event types supported by this service
  repeated string eventTypes = 51256;
};

// Venice Option extensions applicable to rpc Methods.
extend google.protobuf.MethodOptions {
  // Valid only for Pure gRPC methods. Specifies the type of KV store operation the method results in.
  string methodOper = 51270;
  // methodAutoGen is for internal use only
  bool methodAutoGen = 51271;
  // methodTenantDefault marks that this method has a flavor with a default tenant
  bool methodTenantDefault = 51272;
};

// Venice Option extensions applicable to messages
extend google.protobuf.MessageOptions {
  // Path prefix specification for the KV Store for this message. Needs to be specified for all objects that
  // the api server is to persist in the KV store.
  ObjectPrefix objectPrefix = 51290;
  // objectAutoGen is for internal use only
  string objectAutoGen = 51291;
};

extend google.protobuf.FieldOptions {
  // Relation definition between a field and an object.
  ObjectRln objRelation = 51300;
  // check defines a validation rule.
  repeated string check = 51301;
  // default defines a defaulting rule for the field. Limited to scalar fields.
  repeated string default = 51302;
  // storageTransformer defines a transformer that is applied to the field
  // before/after writing/reading to/from persistent storage.
	// Only available for strings and byte arrays.
  repeated string storageTransformer = 51303;
};
